--- a/exercises/bloco_3/dia_2/1_exercicio.html
+++ b/exercises/bloco_3/dia_2/1_exercicio.html
@@ -4,32 +4,65 @@
     <meta charset="UTF-8">
     <title>HTML</title>
     <style>
+        body{
+            font-size:16px;
+        }
+
         h1{
             font-size: 65px;
-            color: orange
+            color: orange;
+            font-family: sans-serif;
         }
+
+        p{
+            font-weight: 600;
+            font-size:3em;
+        }
+
         ul{
             background-color: rgb(200, 248, 204);
         }
+
         .background_color-blue{
             background-color: rgb(134, 194, 243);
         }
+
+        li{
+           text-decoration:underline;
+           font-style: italic;
+           text-align: center;
+           line-height: 50px;
+        }
+
+        .yellow{
+            background-color: yellow;
+        }
+        .red{
+            background-color: red;
+        }
+
+        .brown{
+            background-color: brown;
+        }
+
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
     <p class="background_color-blue">Qual é a sua cor favorita?</p>
     <ul class="background_color-blue">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li class="yellow"> Amarelo</li>
+      <li class="red"   > Vermelho</li>
+      <li class="brown" > Marrom</li>
     </ul>
 
     <!-- Exercícios
-     X 1 - Modifique o tamanho do h1 para 65 pixels
-     X 2 - Modifique a cor do texto do h1 para laranja
-     X 3 - Modifique a cor de fundo da lista não ordenada
-     X 4 - Crie uma classe para modificar a cor de fundo da tag p e da ul ao mesmo tempo
+        X 1 - Modifique o família do h1 para sans-serif
+        X 2 - Deixe o parágrafo com o font-weight 600
+        X 3 - Modifique o font-size do body para 16px
+        X 4 - Coloque o tamanho do parágrafo com o tamanho de 3 vezes o padrão do body
+        X 5 - Explore as propriedades font-style, line-height, text-align e text-decoration
+        X 6 - Troque a cor de fundo de cada item da lista para a cor correspondente ao texto
     -->
   </body>
 </html>
