--- a/exercises/bloco_3/dia_2/1_exercicio.html
+++ b/exercises/bloco_3/dia_2/1_exercicio.html
@@ -3,49 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
-        body{
-            font-size:16px;
-        }
-
-        h1{
-            font-size: 65px;
-            color: orange;
-            font-family: sans-serif;
-        }
-
-        p{
-            font-weight: 600;
-            font-size:3em;
-        }
-
-        ul{
-            background-color: rgb(200, 248, 204);
-        }
-
-        .background_color-blue{
-            background-color: rgb(134, 194, 243);
-        }
-
-        li{
-           text-decoration:underline;
-           font-style: italic;
-           text-align: center;
-           line-height: 50px;
-        }
-
-        .yellow{
-            background-color: yellow;
-        }
-        .red{
-            background-color: red;
-        }
-
-        .brown{
-            background-color: brown;
-        }
-
-    </style>
+    <link type="text/css" rel="stylesheet" href="./1_exercicio_style.css">
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
@@ -57,12 +15,7 @@
     </ul>
 
     <!-- Exercícios
-        X 1 - Modifique o família do h1 para sans-serif
-        X 2 - Deixe o parágrafo com o font-weight 600
-        X 3 - Modifique o font-size do body para 16px
-        X 4 - Coloque o tamanho do parágrafo com o tamanho de 3 vezes o padrão do body
-        X 5 - Explore as propriedades font-style, line-height, text-align e text-decoration
-        X 6 - Troque a cor de fundo de cada item da lista para a cor correspondente ao texto
+      Coloque todo o CSS criado até agora nos exercícios anteriores em um arquivo externo.
     -->
   </body>
 </html>
