--- a/bloco_3/dia_4/Stomatopoda.html
+++ b/bloco_3/dia_4/Stomatopoda.html
@@ -16,5 +16,10 @@
        <li><a href="#">Contato</a></li>
      </ul>
    </nav>
+   <main>
+    <article>
+      <h2>Fatos sobre o Stomatopoda</h2>
+    </article>
+   </main>
   </body>
 </html>
