--- a/bloco_3/dia_4/Stomatopoda.html
+++ b/bloco_3/dia_4/Stomatopoda.html
@@ -19,7 +19,44 @@
    <main>
     <article>
       <h2>Fatos sobre o Stomatopoda</h2>
+
+      <section>
+        <h3>Informaçõe Gerais</h3>
+        <img href="#">
+        <span>Nome Científico: <em>Odontodactylus scyllarus</em></span>
+        <table>
+          <tr>
+            <th>Classificação científica</th>
+          </tr>
+          <tr>
+            <td>Reino:</td>
+            <td>Animalia</td>
+          </tr>
+          <tr>
+            <td>Filo:</td>
+            <td>Arthropoda</td>
+          </tr>
+          <tr>
+            <td>Subfilo:</td>
+            <td>Crustacea</td>
+          </tr>
+          <tr>
+            <td>Classe:</td>
+            <td>Malacostraca</td>
+          </tr>
+          <tr>
+            <td>Subclasse:</td>
+            <td>Hoplocarida</td>
+          </tr>
+          <tr>
+            <td>Ordem:</td>
+            <td>Stomatopoda <br><small>Latreille, 1817</small></td>
+          </tr>
+        </table>
+      </section>
+
     </article>
    </main>
   </body>
 </html>
+
