--- a/bloco_3/dia_4/Stomatopoda.html
+++ b/bloco_3/dia_4/Stomatopoda.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" initial-scale=1 />
+    <link href="./style.css" rel="stylesheet" type="text/css">
     <title>Stomatopoda</title>
   </head>
   <body>
@@ -19,10 +20,9 @@
    <main>
     <article>
       <h2>Fatos sobre o Stomatopoda</h2>
-
       <section>
         <h3>Informaçõe Gerais</h3>
-        <img href="#">
+        <img src="./img/camarao_mantis.jpeg" alt="imagem de camarão mantis">
         <span>Nome Científico: <em>Odontodactylus scyllarus</em></span>
         <table>
           <tr>
@@ -54,9 +54,34 @@
           </tr>
         </table>
       </section>
+      
+      <section>
+        <h3>Olhos Incomuns</h3>
+        <img src="./img/olhos_camarao.webp" alt="olhos camarão mantis">
+        <p>Ele possui um tipo de <strong>olho comosto</strong>, feito de milhares de pequenas unidades, cada uma detectando a luz de forma independente. Aqueles na faixa intermediária - a faixa central que você pode ver na foto - são especiais. São eles que permitem ao animal ver as cores.</p>
+        <p>A maioria das pessoas tem três tipos de células de detecção de luz, ou fotorreceptores, que são sensíveis à luz vermelha, verde e azul. Mas o camarão mantis tem de 12 a 16 fotorreceptores diferentes em sua banda média. A maioria das pessoas presume que elas devem ser realmente boas em ver uma ampla gama de cores - uma “ bomba termonuclear de luz e beleza ”, como disse o Oatmeal. Mas no ano passado, Hanna Thoen da Universidade de Queensland descobriu que eles são muito piores em discriminar cores do que a maioria dos outros animais! Eles parecem usar seus mais de uma dúzia de receptores para reconhecer cores de uma maneira única que é muito diferente de outros animais, mas estranhamente semelhante a alguns satélites.</p>
+        <p> Outras curiosidade sobre os olhos desse camarão é que eles <strong>poderem ver em ultavioleta</strong>, e Como nós, os camarões mantis vêem as cores com a ajuda de proteínas sensíveis à luz chamadas  <strong>opsinas.</strong> </p>
+      </section>
 
+      <section>
+        <h3>O maior boxiador dos mares</h3>
+        <p>Em um comunicado, pesquisadores envolvidos em um novo estudo acerca deste animal, revelaram resultados impressionantes. Segundo o novo estudo, a <strong>velocidade de cada soco do animal, estaria estimada em, aproximadamente, 23 metros por segundo</strong>, que poderia gerar a cada golpe, <strong> 1.500 newtons</strong> de força. Com toda essa força, esses pequenos animais conseguem quebrar as carapaças de caranguejos e outros moluscos.</p>
+        <p>Para os autores do projeto, uma comparação para a dimensão de tal descoberta, seria imaginar um indivíduo socando repetidas vezes, uma parede de concreto, sem quebrar sua mão durante o processo. No entanto, parece ser humanamente impossível.</p>
+        <img src="./img/patas_canaroes.jpg" alt="patas camarão mantis">
+        <p>O estudo também revelou a presença de nanopartículas que serviriam como uma barreira de impacto, à medida que o animal usa suas patas para dar um soco poderoso. No momento em que ocorre o impacto da pata com algo sólido, as <strong> nanopartículas atuaram como um dissipador de energia</strong>, fazendo com que a colisão não ofereça problemas ao animal.</p>
+      </section>
+
+      <section>
+        <h3>referencias</h3>
+        <ul>
+          <li><a href="https://www.nationalgeographic.com/science/article/natures-most-amazing-eyes-just-got-a-bit-weirder">National Geographic</a></li>
+          <li><a href="https://socientifica.com.br/camarao-mantis-tem-o-soco-mais-rapido-e-poderoso-do-oceano/">socientifica</a></li>
+        </ul>
+      </section>
     </article>
    </main>
+   <footer>
+     <p>Conteudo compidade por Dennis MS, 22/02/2021.</p>
+   </footer>
   </body>
 </html>
-
