--- a/bloco_3/dia_4/Stomatopoda.html
+++ b/bloco_3/dia_4/Stomatopoda.html
@@ -11,7 +11,7 @@
     <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
    </header>
    <nav>
-     <ul>
+     <ul class="nav_ul">
        <li><a href="#">Página Inicial</a></li>
        <li><a href="#">Sobre</a></li>
        <li><a href="#">Contato</a></li>
