--- a/bloco_3/dia_4/Stomatopoda.html
+++ b/bloco_3/dia_4/Stomatopoda.html
@@ -20,45 +20,50 @@
    <main>
     <article>
       <h2>Fatos sobre o Stomatopoda</h2>
-      <section>
+      <section class="informacoe_gerais">
         <h3>Informaçõe Gerais</h3>
         <img src="./img/camarao_mantis.jpeg" alt="imagem de camarão mantis">
-        <span>Nome Científico: <em>Odontodactylus scyllarus</em></span>
+        <br>
+        <span><em>Odontodactylus scyllarus</em></span>
         <table>
           <tr>
             <th>Classificação científica</th>
           </tr>
-          <tr>
-            <td>Reino:</td>
-            <td>Animalia</td>
-          </tr>
-          <tr>
-            <td>Filo:</td>
-            <td>Arthropoda</td>
-          </tr>
-          <tr>
-            <td>Subfilo:</td>
-            <td>Crustacea</td>
-          </tr>
-          <tr>
-            <td>Classe:</td>
-            <td>Malacostraca</td>
-          </tr>
-          <tr>
-            <td>Subclasse:</td>
-            <td>Hoplocarida</td>
-          </tr>
-          <tr>
+          <tbody>
+            <table>
+              <tr>
+                <td>Reino:</td>
+                <td>Animalia</td>
+              </tr>
+              <tr>
+                <td>Filo:</td>
+                <td>Arthropoda</td>
+              </tr>
+              <tr>
+                <td>Subfilo:</td>
+                <td>Crustacea</td>
+              </tr>
+              <tr>
+                <td>Classe:</td>
+                <td>Malacostraca</td>
+              </tr>
+              <tr>
+                <td>Subclasse:</td>
+                <td>Hoplocarida</td>
+              </tr>
+              <tr>
             <td>Ordem:</td>
             <td>Stomatopoda <br><small>Latreille, 1817</small></td>
-          </tr>
+              </tr>
+            </table>
+          </tbody>
         </table>
       </section>
       
-      <section>
+      <section class="informacoes_olhos">
         <h3>Olhos Incomuns</h3>
         <img src="./img/olhos_camarao.webp" alt="olhos camarão mantis">
-        <p>Ele possui um tipo de <strong>olho comosto</strong>, feito de milhares de pequenas unidades, cada uma detectando a luz de forma independente. Aqueles na faixa intermediária - a faixa central que você pode ver na foto - são especiais. São eles que permitem ao animal ver as cores.</p>
+        <p>Ele possui um tipo de <strong>olho composto</strong>, feito de milhares de pequenas unidades, cada uma detectando a luz de forma independente. Aqueles na faixa intermediária - a faixa central que você pode ver na foto - são especiais. São eles que permitem ao animal ver as cores.</p>
         <p>A maioria das pessoas tem três tipos de células de detecção de luz, ou fotorreceptores, que são sensíveis à luz vermelha, verde e azul. Mas o camarão mantis tem de 12 a 16 fotorreceptores diferentes em sua banda média. A maioria das pessoas presume que elas devem ser realmente boas em ver uma ampla gama de cores - uma “ bomba termonuclear de luz e beleza ”, como disse o Oatmeal. Mas no ano passado, Hanna Thoen da Universidade de Queensland descobriu que eles são muito piores em discriminar cores do que a maioria dos outros animais! Eles parecem usar seus mais de uma dúzia de receptores para reconhecer cores de uma maneira única que é muito diferente de outros animais, mas estranhamente semelhante a alguns satélites.</p>
         <p> Outras curiosidade sobre os olhos desse camarão é que eles <strong>poderem ver em ultavioleta</strong>, e Como nós, os camarões mantis vêem as cores com a ajuda de proteínas sensíveis à luz chamadas  <strong>opsinas.</strong> </p>
       </section>
