--- a/bloco_3/dia_4/Stomatopoda.html
+++ b/bloco_3/dia_4/Stomatopoda.html
@@ -68,15 +68,15 @@
         <p> Outras curiosidade sobre os olhos desse camarão é que eles <strong>poderem ver em ultavioleta</strong>, e Como nós, os camarões mantis vêem as cores com a ajuda de proteínas sensíveis à luz chamadas  <strong>opsinas.</strong> </p>
       </section>
 
-      <section>
+      <section class="informacoes_forca">
         <h3>O maior boxiador dos mares</h3>
         <p>Em um comunicado, pesquisadores envolvidos em um novo estudo acerca deste animal, revelaram resultados impressionantes. Segundo o novo estudo, a <strong>velocidade de cada soco do animal, estaria estimada em, aproximadamente, 23 metros por segundo</strong>, que poderia gerar a cada golpe, <strong> 1.500 newtons</strong> de força. Com toda essa força, esses pequenos animais conseguem quebrar as carapaças de caranguejos e outros moluscos.</p>
-        <p>Para os autores do projeto, uma comparação para a dimensão de tal descoberta, seria imaginar um indivíduo socando repetidas vezes, uma parede de concreto, sem quebrar sua mão durante o processo. No entanto, parece ser humanamente impossível.</p>
         <img src="./img/patas_canaroes.jpg" alt="patas camarão mantis">
+        <p>Para os autores do projeto, uma comparação para a dimensão de tal descoberta, seria imaginar um indivíduo socando repetidas vezes, uma parede de concreto, sem quebrar sua mão durante o processo. No entanto, parece ser humanamente impossível.</p>
         <p>O estudo também revelou a presença de nanopartículas que serviriam como uma barreira de impacto, à medida que o animal usa suas patas para dar um soco poderoso. No momento em que ocorre o impacto da pata com algo sólido, as <strong> nanopartículas atuaram como um dissipador de energia</strong>, fazendo com que a colisão não ofereça problemas ao animal.</p>
       </section>
 
-      <section>
+      <section class="referencias">
         <h3>referencias</h3>
         <ul>
           <li><a href="https://www.nationalgeographic.com/science/article/natures-most-amazing-eyes-just-got-a-bit-weirder">National Geographic</a></li>
