--- a/bloco_3/dia_4/Stomatopoda.html
+++ b/bloco_3/dia_4/Stomatopoda.html
@@ -70,10 +70,20 @@
 
       <section class="informacoes_forca">
         <h3>O maior boxiador dos mares</h3>
-        <p>Em um comunicado, pesquisadores envolvidos em um novo estudo acerca deste animal, revelaram resultados impressionantes. Segundo o novo estudo, a <strong>velocidade de cada soco do animal, estaria estimada em, aproximadamente, 23 metros por segundo</strong>, que poderia gerar a cada golpe, <strong> 1.500 newtons</strong> de força. Com toda essa força, esses pequenos animais conseguem quebrar as carapaças de caranguejos e outros moluscos.</p>
         <img src="./img/patas_canaroes.jpg" alt="patas camarão mantis">
+        <p>Em um comunicado, pesquisadores envolvidos em um novo estudo acerca deste animal, revelaram resultados impressionantes. Segundo o novo estudo, a <strong>velocidade de cada soco do animal, estaria estimada em, aproximadamente, 23 metros por segundo</strong>, que poderia gerar a cada golpe, <strong> 1.500 newtons</strong> de força. Com toda essa força, esses pequenos animais conseguem quebrar as carapaças de caranguejos e outros moluscos.</p>
         <p>Para os autores do projeto, uma comparação para a dimensão de tal descoberta, seria imaginar um indivíduo socando repetidas vezes, uma parede de concreto, sem quebrar sua mão durante o processo. No entanto, parece ser humanamente impossível.</p>
         <p>O estudo também revelou a presença de nanopartículas que serviriam como uma barreira de impacto, à medida que o animal usa suas patas para dar um soco poderoso. No momento em que ocorre o impacto da pata com algo sólido, as <strong> nanopartículas atuaram como um dissipador de energia</strong>, fazendo com que a colisão não ofereça problemas ao animal.</p>
+      </section>
+      
+      <section class="vidio">
+          <h3>Descubra mais no video do Nat Geo WILD</h3>
+          <iframe src="https://www.youtube.com/embed/E0Li1k5hGBE" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                  allowfullscreen
+          >
+          </iframe>
       </section>
 
       <section class="referencias">
@@ -83,6 +93,7 @@
           <li><a href="https://socientifica.com.br/camarao-mantis-tem-o-soco-mais-rapido-e-poderoso-do-oceano/">socientifica</a></li>
         </ul>
       </section>
+
     </article>
    </main>
    <footer>
