correção ortografica no footer

--- a/bloco_3/dia_4/Stomatopoda.html
+++ b/bloco_3/dia_4/Stomatopoda.html
@@ -97,7 +97,7 @@
     </article>
    </main>
    <footer>
-     <p>Conteudo compidade por Dennis MS, 22/02/2021.</p>
+     <p>Conteudo compilado por Dennis MS, 22/02/2021.</p>
    </footer>
   </body>
 </html>
